Corrected the branch of the submodule tomato.applications to master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "tomato.applications"]
 	path = tomato.applications
 	url = git@github.com:khietbt/tomato.applications.git
+	branch = master
