--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,13 @@
     <groupId>microservices</groupId>
     <artifactId>tomato</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>${revision}</version>
     <modules>
         <module>tomato.applications</module>
     </modules>
+
+    <properties>
+        <revision>1.0.0-RELEASE</revision>
+        <spring-boot-starter.version>2.4.5</spring-boot-starter.version>
+    </properties>
 </project>
