--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,10 @@
     <properties>
         <revision>1.0.0-RELEASE</revision>
         <spring-boot-starter.version>2.4.5</spring-boot-starter.version>
+        <spring-cloud.version>2020.0.2</spring-cloud.version>
+        <spring-boot-admin.version>2.4.0</spring-boot-admin.version>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 </project>
