--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = tomato.applications
 	url = git@github.com:khietbt/tomato.applications.git
 	branch = master
+[submodule "tomato.configurations"]
+	path = tomato.configurations
+	url = git@github.com:khietbt/tomato.configurations.git
+	branch = master
