--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ hs_err_pid*
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.gradle
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -105,3 +106,4 @@ target/
 .project
 .settings
 .factorypath
+build
