--- a/tomato.backends/pom.xml
+++ b/tomato.backends/pom.xml
@@ -15,12 +15,44 @@
 
     <modules>
         <module>tomato.backends.adminservice</module>
-<!--        <module>tomato.backends.configservice</module>-->
+        <module>tomato.backends.configservice</module>
 <!--        <module>tomato.backends.discoveryservice</module>-->
 <!--        <module>tomato.backends.gatewayservice</module>-->
 <!--        <module>tomato.backends.productservice</module>-->
 <!--        <module>tomato.backends.adminservice</module>-->
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
