--- a/tomato.backends/tomato.backends.configservice/pom.xml
+++ b/tomato.backends/tomato.backends.configservice/pom.xml
@@ -3,9 +3,9 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>tomato.backends.adminservice</artifactId>
+    <artifactId>tomato.backends.configservice</artifactId>
     <name>${project.artifactId}</name>
-    <description>Spring Boot Admin Server Application</description>
+    <description>Spring Boot Config Server Application</description>
 
     <parent>
         <artifactId>tomato.backends</artifactId>
@@ -18,29 +18,25 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
         <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-server</artifactId>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>de.codecentric</groupId>
-                <artifactId>spring-boot-admin-dependencies</artifactId>
-                <version>${springBootAdminVersion}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -50,7 +46,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${springBootVersion}</version>
                 <configuration>
-                    <mainClass>tomato.backends.adminservice.AdminServiceApplication</mainClass>
+                    <mainClass>tomato.backends.configservice.ConfigServiceApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
