--- a/tomato.backends/tomato.backends.discoveryservice/src/main/resources/bootstrap.yml
+++ b/tomato.backends/tomato.backends.discoveryservice/src/main/resources/bootstrap.yml
@@ -7,6 +7,10 @@ spring:
       username: ${CONFIG_SERVICE_USERNAME:username}
       password: ${CONFIG_SERVICE_PASSWORD:password}
       fail-fast: true
+  security:
+    user:
+      name: username
+      password: password
 server:
   port: 8762
 eureka:
