Finished directory structure of modules using maven

--- a/tomato.backends/tomato.backends.gatewayservice/src/main/resources/bootstrap.yml
+++ b/tomato.backends/tomato.backends.gatewayservice/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: @project.name@
+    name: tomato.backends.gatewayservice
   cloud:
     gateway:
       routes:
@@ -11,9 +11,7 @@ spring:
           filters:
             - RewritePath=/productservice/(?<segment>.*), //$\{segment}
     config:
-      uri: ${CONFIG_SERVICE_URI:@config-service.uri@}
-      username: ${CONFIG_SERVICE_USERNAME:@config-service.username@}
-      password: ${CONFIG_SERVICE_PASSWORD:@config-service.password@}
+      uri: ${CONFIG_SERVICE_URI:http://localhost:8888}
       fail-fast: true
   sleuth:
     reactor:
