--- a/tomato.backends/pom.xml
+++ b/tomato.backends/pom.xml
@@ -17,9 +17,9 @@
         <module>tomato.backends.adminservice</module>
         <module>tomato.backends.configservice</module>
         <module>tomato.backends.discoveryservice</module>
-<!--        <module>tomato.backends.gatewayservice</module>-->
-<!--        <module>tomato.backends.productservice</module>-->
-<!--        <module>tomato.backends.adminservice</module>-->
+        <module>tomato.backends.gatewayservice</module>
+        <module>tomato.backends.productservice</module>
+        <module>tomato.backends.userservice</module>
     </modules>
 
     <dependencies>
