Applied basic security for config server / discovery service

--- a/tomato.backends/tomato.backends.discoveryservice/src/main/resources/bootstrap.yml
+++ b/tomato.backends/tomato.backends.discoveryservice/src/main/resources/bootstrap.yml
@@ -5,6 +5,8 @@ spring:
     config:
       uri: ${CONFIG_SERVICE_URI:http://localhost:8888}
       fail-fast: true
+      username: username
+      password: password
   security:
     user:
       name: username
