--- a/tomato.backends/tomato.backends.configservice/src/main/resources/bootstrap.yml
+++ b/tomato.backends/tomato.backends.configservice/src/main/resources/bootstrap.yml
@@ -30,6 +30,10 @@ spring:
 #    change-log: classpath:/db/changelog/db.changelog-master.yaml
   profiles:
     active: jdbc, git
+  security:
+    user:
+      name: username
+      password: password
 server:
   port: ${CONFIG_SERVICE_PORT:8888}
 info:
