--- a/tomato.backends/tomato.backends.adminservice/src/main/resources/bootstrap.yml
+++ b/tomato.backends/tomato.backends.adminservice/src/main/resources/bootstrap.yml
@@ -1,10 +1,16 @@
 spring:
+  security:
+    user:
+      name: username
+      password: password
   application:
     name: tomato.backends.adminservice
   cloud:
     config:
       uri: ${CONFIG_SERVICE_URI:http://localhost:8888}
       fail-fast: true
+      username: username
+      password: password
   boot:
     admin:
       instance-auth:
