--- a/tomato.backends/tomato.backends.gatewayservice/src/main/resources/bootstrap.yml
+++ b/tomato.backends/tomato.backends.gatewayservice/src/main/resources/bootstrap.yml
@@ -13,6 +13,8 @@ spring:
     config:
       uri: ${CONFIG_SERVICE_URI:http://localhost:8888}
       fail-fast: true
+      username: username
+      password: password
   sleuth:
     reactor:
       enabled: true
