--- a/tomato.backends/tomato.backends.userservice/src/main/resources/bootstrap.yml
+++ b/tomato.backends/tomato.backends.userservice/src/main/resources/bootstrap.yml
@@ -15,6 +15,8 @@ spring:
     config:
       uri: ${CONFIG_SERVICE_URI:http://localhost:8888}
       fail-fast: true
+      username: username
+      password: password
   liquibase:
     enabled: false
 server:
