--- a/tomato.plugins/tomato.plugins.jmeter/pom.xml
+++ b/tomato.plugins/tomato.plugins.jmeter/pom.xml
@@ -10,7 +10,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tomato.plugins.stompoversockjssamplers</artifactId>
+    <artifactId>tomato.plugins.jmeter</artifactId>
 
     <properties>
         <springBootVersion>2.5.0</springBootVersion>
@@ -89,26 +89,5 @@
                 </executions>
             </plugin>
         </plugins>
-        <!--        <finalName>${project.artifactId}-${project.version}</finalName>-->
-        <!--        <plugins>-->
-        <!--            <plugin>-->
-        <!--                <groupId>org.apache.maven.plugins</groupId>-->
-        <!--                <artifactId>maven-assembly-plugin</artifactId>-->
-        <!--                <configuration>-->
-        <!--                    <descriptorRefs>-->
-        <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
-        <!--                    </descriptorRefs>-->
-        <!--                </configuration>-->
-        <!--                <executions>-->
-        <!--                    <execution>-->
-        <!--                        <id>make-assembly</id>-->
-        <!--                        <phase>package</phase>-->
-        <!--                        <goals>-->
-        <!--                            <goal>single</goal>-->
-        <!--                        </goals>-->
-        <!--                    </execution>-->
-        <!--                </executions>-->
-        <!--            </plugin>-->
-        <!--        </plugins>-->
     </build>
 </project>
