Added audit columns to the properties table

--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,6 @@
         <module>tomato-discovery-service</module>
         <module>tomato-gateway-service</module>
         <module>tomato-admin-service</module>
+        <module>tomato-user-service</module>
     </modules>
 </project>
