--- a/tomato-user-service/pom.xml
+++ b/tomato-user-service/pom.xml
@@ -3,12 +3,12 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>tomato.backends.userservice</artifactId>
+    <artifactId>tomato-user-service</artifactId>
     <name>${project.artifactId}</name>
     <description>User Service Application</description>
 
     <parent>
-        <artifactId>tomato.backends</artifactId>
+        <artifactId>tomato</artifactId>
         <groupId>microservices</groupId>
         <version>${revision}</version>
     </parent>
@@ -19,6 +19,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -44,9 +48,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${springBootVersion}</version>
+                <version>${spring-boot-version}</version>
                 <configuration>
-                    <mainClass>tomato.backends.userservice.WebSocketServiceApplication</mainClass>
+                    <mainClass>tomato.userservice.UserServiceApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
